--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,126 +1,270 @@
 name: "AlamofireImage CI"
 
-on: 
-  push:
-    branches:
-      - master
-      - hotfix
-  pull_request:
-    branches:
-      - '*'
+on:
+push:
+  branches:
+    - master
+    - hotfix
+  paths:
+    - '.github/workflows/**'
+    - 'Package.swift'
+    - 'Source/**'
+    - 'Tests/**'
+pull_request:
+  paths:
+    - '.github/workflows/**'
+    - 'Package.swift'
+    - 'Source/**'
+    - 'Tests/**'
 
+concurrency:
+  group: ${{ github.ref_name }}
+  cancel-in-progress: true
 jobs:
-  macOS_5_1:
-    name: Build macOS (5.1)
-    runs-on: macOS-latest
+  macOS:
+    name: Test macOS, All Xcodes and Swifts
+    runs-on: ${{ matrix.runsOn }}
     env:
-      DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
+      DEVELOPER_DIR: "/Applications/${{ matrix.xcode }}/Contents/Developer"
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - xcode: "Xcode_14.0.1.app"
+            runsOn: macOS-12
+            name: "macOS 12, Xcode 14.0.1, Swift 5.7.0"
+            testPlan: "macOS"
+          - xcode: "Xcode_13.4.1.app"
+            runsOn: macOS-12
+            name: "macOS 12, Xcode 13.4.1, Swift 5.6.1"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_13.3.1.app"
+            runsOn: macOS-12
+            name: "macOS 12, Xcode 13.3.1, Swift 5.6.0"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_13.2.1.app"
+            runsOn: macOS-11
+            name: "macOS 11, Xcode 13.2.1, Swift 5.5.2"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_13.1.app"
+            runsOn: macOS-11
+            name: "macOS 11, Xcode 13.1, Swift 5.5.1"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_13.0.app"
+            runsOn: macOS-11
+            name: "macOS 11, Xcode 13.0, Swift 5.5.0"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_12.5.1.app"
+            runsOn: macOS-11
+            name: "macOS 11, Xcode 12.5.1, Swift 5.4.2"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_12.4.app"
+            runsOn: macOS-10.15
+            name: "macOS 10.15, Xcode 12.4, Swift 5.3.2"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_12.3.app"
+            runsOn: macOS-10.15
+            name: "macOS 10.15, Xcode 12.3, Swift 5.3.2"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_12.2.app"
+            runsOn: macOS-10.15
+            name: "macOS 10.15, Xcode 12.2, Swift 5.3.1"
+            testPlan: "macOS-NoTS"
+          - xcode: "Xcode_12.1.1.app"
+            runsOn: macOS-10.15
+            name: "macOS 10.15, Xcode 12.1.1, Swift 5.3.0"
+            testPlan: "macOS-NoTS"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Install Firewalk
+        run: "brew install alamofire/alamofire/firewalk && firewalk &"
       - name: Dependencies
         run: carthage bootstrap --no-build
-      - name: macOS (5.1)
+      - name: ${{ matrix.name }}
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean build | xcpretty
-  macOS_5_2:
-    name: Test macOS (5.2)
-    runs-on: macOS-latest
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_11.7.app/Contents/Developer
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install Firewalk
-        run: brew install alamofire/alamofire/firewalk && firewalk &
-      - name: Dependencies
-        run: carthage bootstrap --no-build
-      - name: macOS (5.2)
-        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
-  macOS_5_3:
-    name: Test macOS (5.3)
-    runs-on: macOS-latest
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install Firewalk
-        run: brew install alamofire/alamofire/firewalk && firewalk &
-      - name: Dependencies
-        run: carthage bootstrap --no-build
-      - name: macOS (5.3)
-        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
   Catalyst:
     name: Test Catalyst
-    runs-on: macOS-latest
+    runs-on: macOS-12
     env:
-      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_14.0.1.app/Contents/Developer
+    timeout-minutes: 10
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install Firewalk
         run: brew install alamofire/alamofire/firewalk && firewalk &
       - name: Dependencies
         run: carthage bootstrap --no-build
       - name: Catalyst
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage iOS" -destination "platform=macOS" clean test | xcpretty
-  iOS:
-    name: Test iOS 
-    runs-on: macOS-latest
-    env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
-    strategy:
-      matrix:
-        destination: ["OS=14.4,name=iPhone 12 Pro"]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install Firewalk
-        run: brew install alamofire/alamofire/firewalk && firewalk &
-      - name: Dependencies
-        run: carthage bootstrap --no-build
-      - name: iOS - ${{ matrix.destination }}
-        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage iOS" -destination "${{ matrix.destination }}" clean test | xcpretty
-  tvOS:
-    name: Test tvOS 
-    runs-on: macOS-latest
-    env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
-    strategy:
-      matrix:
-        destination: ["OS=14.3,name=Apple TV 4K"]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install Firewalk
-        run: brew install alamofire/alamofire/firewalk && firewalk &
-      - name: Dependencies
-        run: carthage bootstrap --no-build
-      - name: tvOS - ${{ matrix.destination }}
-        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage tvOS" -destination "${{ matrix.destination }}" clean test | xcpretty
-  watchOS:
-    name: Build watchOS
-    runs-on: macOS-latest
-    env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
-    strategy:
-      matrix:
-        destination: ["OS=7.2,name=Apple Watch Series 6 - 44mm"]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Dependencies
-        run: carthage bootstrap --no-build
-      - name: watchOS - ${{ matrix.destination }}
-        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage watchOS" -destination "${{ matrix.destination }}" clean build | xcpretty
-  spm:
-    name: Build with SPM
-    runs-on: macOS-latest    
+  Latest:
+    name: Test Latest (iOS, tvOS, watchOS)
+    runs-on: macOS-12
     env:
-      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
+      DEVELOPER_DIR: "/Applications/Xcode_14.0.1.app/Contents/Developer"
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - destination: "OS=16.0,name=iPhone 14 Pro"
+            name: "iOS"
+            scheme: "AlamofireImage iOS"
+          - destination: "OS=16.0,name=Apple TV"
+            name: "tvOS"
+            scheme: "AlamofireImage tvOS"
+          - destination: "OS=9.0,name=Apple Watch Series 8 (45mm)"
+            name: "watchOS"
+            scheme: "AlamofireImage watchOS"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: SPM Build
-        run: swift build -c debug
-
+      - uses: actions/checkout@v3
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk && firewalk &
+      - name: Dependencies
+        run: carthage bootstrap --no-build
+      - name: ${{ matrix.name }}
+        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "${{ matrix.scheme }}" -destination "${{ matrix.destination }}" clean test | xcpretty
+  iOS:
+    name: "Test Old iOS"
+    runs-on: firebreak
+    env:
+      DEVELOPER_DIR: "/Applications/Xcode_14.0.1.app/Contents/Developer"
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - destination: "OS=15.5,name=iPhone 13 Pro"
+            name: "iOS 15.5"
+            testPlan: "iOS-NoTS"
+          - destination: "OS=14.5,name=iPhone 12 Pro"
+            name: "iOS 14.5"
+            testPlan: "iOS-NoTS"
+          - destination: "OS=13.7,name=iPhone 11 Pro"
+            name: "iOS 13.7"
+            testPlan: "iOS-NoTS"
+          - destination: "OS=12.4,name=iPhone Xs"
+            name: "iOS 12.4"
+            testPlan: "iOS-Old"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk || brew upgrade alamofire/alamofire/firewalk && firewalk &
+      - name: Dependencies
+        run: carthage bootstrap --no-build
+      - name: ${{ matrix.destination }}
+        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage iOS" -destination "${{ matrix.destination }}" -testPlan "${{ matrix.testPlan }}" clean test | xcpretty
+  tvOS:
+    name: Test tvOS
+    runs-on: firebreak
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_14.0.1.app/Contents/Developer
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - destination: "OS=15.4,name=Apple TV"
+            name: "tvOS 15.4"
+            testPlan: "tvOS-NoTS"
+          - destination: "OS=14.5,name=Apple TV"
+            name: "tvOS 14.5"
+            testPlan: "tvOS-NoTS"
+          - destination: "OS=13.4,name=Apple TV"
+            name: "tvOS 13.4"
+            testPlan: "tvOS-NoTS"
+          - destination: "OS=12.4,name=Apple TV"
+            name: "tvOS 12.4"
+            testPlan: "tvOS-Old"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk || brew upgrade alamofire/alamofire/firewalk && firewalk &
+      - name: Dependencies
+        run: carthage bootstrap --no-build
+      - name: ${{ matrix.destination }}
+        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage tvOS" -destination "${{ matrix.destination }}" -testPlan "${{ matrix.testPlan }}" clean test | xcpretty
+  watchOS:
+    name: Test watchOS
+    runs-on: firebreak
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_14.0.1.app/Contents/Developer
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - destination: "OS=8.5,name=Apple Watch Series 7 (45mm)"
+            name: "watchOS 8.5"
+            testPlan: "watchOS-NoTS"
+          - destination: "OS=7.4,name=Apple Watch Series 6 (44mm)"
+            name: "watchOS 7.4"
+            testPlan: "watchOS-NoTS"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk && firewalk &
+      - name: Dependencies
+        run: carthage bootstrap --no-build
+      - name: ${{ matrix.destination }}
+        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage watchOS" -destination "${{ matrix.destination }}" -testPlan "${{ matrix.testPlan }}" clean build | xcpretty
+  SPM:
+    name: Test with SPM
+    runs-on: ${{ matrix.runsOn }}
+    env:
+      DEVELOPER_DIR: "/Applications/${{ matrix.xcode }}/Contents/Developer"
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - xcode: "Xcode_14.0.1.app"
+            runsOn: macOS-12
+            name: "macOS 12, SPM 5.7.0 Test"
+            run: "swift test -c debug"
+          - xcode: "Xcode_13.4.1.app"
+            runsOn: macOS-12
+            name: "macOS 12, SPM 5.6.1 Test"
+            run: "swift test -c debug"
+          - xcode: "Xcode_13.3.1.app"
+            runsOn: macOS-12
+            name: "macOS 12, SPM 5.6.0 Test"
+            run: "swift test -c debug"
+          - xcode: "Xcode_13.2.1.app"
+            runsOn: macOS-11
+            name: "macOS 11, SPM 5.5.2 Test"
+            run: "swift test -c debug"
+          - xcode: "Xcode_13.1.app"
+            runsOn: macOS-11
+            name: "macOS 11, SPM 5.5.1 Test"
+            run: "swift test -c debug"
+          - xcode: "Xcode_13.0.app"
+            runsOn: macOS-11
+            name: "macOS 11, SPM 5.5.0 Test"
+            run: "swift test -c debug"
+          - xcode: "Xcode_12.5.1.app"
+            runsOn: macOS-11
+            name: "macOS 11, SPM 5.4.2 Build"
+            run: "swift build -c debug"
+          - xcode: "Xcode_12.4.app"
+            runsOn: macOS-10.15
+            name: "macOS 10.15, SPM 5.3.2 Build"
+            run: "swift build -c debug"
+          - xcode: "Xcode_12.3.app"
+            runsOn: macOS-10.15
+            name: "macOS 10.15, SPM 5.3.2 Build"
+            run: "swift build -c debug"
+          - xcode: "Xcode_12.2.app"
+            runsOn: macOS-10.15
+            name: "macOS 10.15, SPM 5.3.1 Build"
+            run: "swift build -c debug"
+          - xcode: "Xcode_12.1.app"
+            runsOn: macOS-10.15
+            name: "macOS 10.15, SPM 5.3.0 Build"
+            run: "swift build -c debug"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk && firewalk &
+      - name: Test SPM
+        run: ${{ matrix.run }}
