--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - xcode: "Xcode_14.3"
+            runsOn: firebreak
+            name: "macOS 13, Xcode 14.3, Swift 5.8.0"
+            testPlan: "macOS"
+          - xcode: "Xcode_14.2"
+            runsOn: macOS-12
+            name: "macOS 12, Xcode 14.2, Swift 5.7.2"
+            testPlan: "macOS"
           - xcode: "Xcode_14.1.app"
             runsOn: macOS-12
             name: "macOS 12, Xcode 14.1, Swift 5.7.1"
@@ -63,22 +71,6 @@ jobs:
             runsOn: macOS-11
             name: "macOS 11, Xcode 12.5.1, Swift 5.4.2"
             testPlan: "macOS-NoTS"
-          - xcode: "Xcode_12.4.app"
-            runsOn: macOS-10.15
-            name: "macOS 10.15, Xcode 12.4, Swift 5.3.2"
-            testPlan: "macOS-NoTS"
-          - xcode: "Xcode_12.3.app"
-            runsOn: macOS-10.15
-            name: "macOS 10.15, Xcode 12.3, Swift 5.3.2"
-            testPlan: "macOS-NoTS"
-          - xcode: "Xcode_12.2.app"
-            runsOn: macOS-10.15
-            name: "macOS 10.15, Xcode 12.2, Swift 5.3.1"
-            testPlan: "macOS-NoTS"
-          - xcode: "Xcode_12.1.1.app"
-            runsOn: macOS-10.15
-            name: "macOS 10.15, Xcode 12.1.1, Swift 5.3.0"
-            testPlan: "macOS-NoTS"
     steps:
       - uses: actions/checkout@v3
       - name: Install Firewalk
@@ -89,9 +81,9 @@ jobs:
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean build | xcpretty
   Catalyst:
     name: Test Catalyst
-    runs-on: macOS-12
+    runs-on: macOS-13
     env:
-      DEVELOPER_DIR: /Applications/Xcode_14.1.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
@@ -105,19 +97,19 @@ jobs:
     name: Test Latest (iOS, tvOS, watchOS)
     runs-on: macOS-12
     env:
-      DEVELOPER_DIR: "/Applications/Xcode_14.1.app/Contents/Developer"
+      DEVELOPER_DIR: "/Applications/Xcode_14.3.app/Contents/Developer"
     timeout-minutes: 10
     strategy:
       fail-fast: false
       matrix:
         include:
-          - destination: "OS=16.1,name=iPhone 14 Pro"
+          - destination: "OS=16.4,name=iPhone 14 Pro"
             name: "iOS"
             scheme: "AlamofireImage iOS"
-          - destination: "OS=16.1,name=Apple TV"
+          - destination: "OS=16.4,name=Apple TV"
             name: "tvOS"
             scheme: "AlamofireImage tvOS"
-          - destination: "OS=9.1,name=Apple Watch Series 8 (45mm)"
+          - destination: "OS=9.4,name=Apple Watch Series 8 (45mm)"
             name: "watchOS"
             scheme: "AlamofireImage watchOS"
     steps:
@@ -144,12 +136,9 @@ jobs:
           - destination: "OS=14.5,name=iPhone 12 Pro"
             name: "iOS 14.5"
             testPlan: "iOS-NoTS"
-          - destination: "OS=13.7,name=iPhone 11 Pro"
-            name: "iOS 13.7"
-            testPlan: "iOS-NoTS"
-          - destination: "OS=12.4,name=iPhone Xs"
-            name: "iOS 12.4"
-            testPlan: "iOS-Old"
+          # - destination: "OS=13.7,name=iPhone 11 Pro"
+          #   name: "iOS 13.7"
+          #   testPlan: "iOS-NoTS"
     steps:
       - uses: actions/checkout@v3
       - name: Install Firewalk
@@ -158,11 +147,37 @@ jobs:
         run: carthage bootstrap --no-build
       - name: ${{ matrix.destination }}
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage iOS" -destination "${{ matrix.destination }}" -testPlan "${{ matrix.testPlan }}" clean test | xcpretty
+  Beta:
+    name: "Test Beta OSes"
+    runs-on: firebreak
+    env:
+      DEVELOPER_DIR: "/Applications/Xcode_15.0.app/Contents/Developer"
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - destination: "OS=17.0,name=iPhone 14 Pro"
+            name: "iOS 17.0"
+            testPlan: "iOS"
+            scheme: "AlamofireImage iOS"
+          # - destination: "OS=1.0,name=Apple Vision Pro"
+          #   name: "visionOS 1.0"
+          #   testPlan: "visionOS"
+          #   scheme: "Alamofire visionOS"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk || brew upgrade alamofire/alamofire/firewalk && firewalk &
+      - name: Dependencies
+        run: carthage bootstrap --no-build
+      - name: ${{ matrix.name }}
+        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -project "AlamofireImage.xcworkspace" -scheme "${{ matrix.scheme }}" -destination "${{ matrix.destination }}" -testPlan "${{ matrix.testPlan }}" clean test | xcpretty
   tvOS:
     name: Test Old tvOS
     runs-on: firebreak
     env:
-      DEVELOPER_DIR: /Applications/Xcode_14.1.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
     timeout-minutes: 10
     strategy:
       fail-fast: false
@@ -192,7 +207,7 @@ jobs:
     name: Test watchOS
     runs-on: firebreak
     env:
-      DEVELOPER_DIR: /Applications/Xcode_14.1.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
     timeout-minutes: 10
     strategy:
       fail-fast: false
@@ -222,54 +237,33 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - xcode: "Xcode_14.1.app"
+          - xcode: "Xcode_14.3"
+            runsOn: firebreak
+            name: "macOS 13, SPM 5.8.0 Test"
+          - xcode: "Xcode_14.2"
+            runsOn: macOS-12
+            name: "macOS 12, SPM 5.7.2 Test"
+          - xcode: "Xcode_14.1"
             runsOn: macOS-12
             name: "macOS 12, SPM 5.7.1 Test"
-            run: "swift test -c debug"
-          - xcode: "Xcode_14.0.1.app"
+          - xcode: "Xcode_14.0.1"
             runsOn: macOS-12
             name: "macOS 12, SPM 5.7.0 Test"
-            run: "swift test -c debug"
-          - xcode: "Xcode_13.4.1.app"
+          - xcode: "Xcode_13.4.1"
             runsOn: macOS-12
             name: "macOS 12, SPM 5.6.1 Test"
-            run: "swift test -c debug"
-          - xcode: "Xcode_13.3.1.app"
+          - xcode: "Xcode_13.3.1"
             runsOn: macOS-12
             name: "macOS 12, SPM 5.6.0 Test"
-            run: "swift test -c debug"
-          - xcode: "Xcode_13.2.1.app"
+          - xcode: "Xcode_13.2.1"
             runsOn: macOS-11
             name: "macOS 11, SPM 5.5.2 Test"
-            run: "swift test -c debug"
-          - xcode: "Xcode_13.1.app"
+          - xcode: "Xcode_13.1"
             runsOn: macOS-11
             name: "macOS 11, SPM 5.5.1 Test"
-            run: "swift test -c debug"
-          - xcode: "Xcode_13.0.app"
+          - xcode: "Xcode_13.0"
             runsOn: macOS-11
             name: "macOS 11, SPM 5.5.0 Test"
-            run: "swift test -c debug"
-          - xcode: "Xcode_12.5.1.app"
-            runsOn: macOS-11
-            name: "macOS 11, SPM 5.4.2 Build"
-            run: "swift build -c debug"
-          - xcode: "Xcode_12.4.app"
-            runsOn: macOS-10.15
-            name: "macOS 10.15, SPM 5.3.2 Build"
-            run: "swift build -c debug"
-          - xcode: "Xcode_12.3.app"
-            runsOn: macOS-10.15
-            name: "macOS 10.15, SPM 5.3.2 Build"
-            run: "swift build -c debug"
-          - xcode: "Xcode_12.2.app"
-            runsOn: macOS-10.15
-            name: "macOS 10.15, SPM 5.3.1 Build"
-            run: "swift build -c debug"
-          - xcode: "Xcode_12.1.app"
-            runsOn: macOS-10.15
-            name: "macOS 10.15, SPM 5.3.0 Build"
-            run: "swift build -c debug"
     steps:
       - uses: actions/checkout@v3
       - name: Install Firewalk
