--- a/AlamofireImage.xcodeproj/xcshareddata/xcschemes/AlamofireImage iOS.xcscheme
+++ b/AlamofireImage.xcodeproj/xcshareddata/xcschemes/AlamofireImage iOS.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1240"
-   version = "1.3">
+   LastUpgradeVersion = "1500"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -74,6 +74,18 @@
             ReferencedContainer = "container:AlamofireImage.xcodeproj">
          </BuildableReference>
       </CodeCoverageTargets>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:Tests/Test Plans/iOS.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+         <TestPlanReference
+            reference = "container:Tests/Test Plans/iOS-NoTS.xctestplan">
+         </TestPlanReference>
+         <TestPlanReference
+            reference = "container:Tests/Test Plans/iOS-Old.xctestplan">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO">
